[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Portfolio Project"
requires-python = ">=3.11"

[tool.poetry.dependencies]
pandas = "^2.2.3"
requests = "^2.32.3"
streamlit = "^1.44.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
portfolio = "app:main"  # Optional, if you want to use app.py as an entry point

# Disable package mode (so no package structure is required)
package-mode = false
